--- a/Metode_JP.ipynb
+++ b/Metode_JP.ipynb
@@ -1018,7 +1018,7 @@
    "id": "6a5f5f32",
    "metadata": {},
    "source": [
-    "Moji podaci su se u gornjim računanjima klasificirali u 16 klasa i s zadanim željenim dimenzijama, 400 kod PCA i RP te 100 kod ICA i cMDS. Sada će se teknike provrtiti na podacima s manje klasa te će se iscrtati ovisnosti s dimenzijom i točnošću."
+    "Moji podaci su se u gornjim računanjima klasificirali u 16 klasa i s zadanim željenim dimenzijama, 400 kod PCA i RP te 100 kod ICA i cMDS. Sada će se tehnike provrtiti na podacima s manje klasa te će se iscrtati ovisnosti s dimenzijom i točnošću."
    ]
   },
   {
@@ -1135,11 +1135,7 @@
    "source": [
     "print(\"Ovisnost dimenzije i točnosti na trening skupu\")\n",
     "plt.scatter(dimenzije, točnost_za_trening)\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"Ovisnost dimenzije i točnosti na testnom skupu\")\n",
-    "plt.scatter(dimenzije, točnost_za_testni)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
